# DocuMind-AI

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
app/: rag_pipeline.py  test_setup.py
app/embeddings/: embedding_model.py
app/frontend/: app.py
app/ingestion/: chunker.py  loader.py
app/llm/: groq_model.py
app/memory/: conversation_memory.py
app/prompting/: prompt_builder.py
app/retrieval/: retriever.py
app/utils/: document_processor.py
app/vectorstore/: chroma_store.py  faiss_store.py
data/: Data Engieering Resume .docx  employee_policy.txt  health_benefits.txt  information_security_policy.txt  leave_policy.txt  onboarding_guide.txt  remote_work_policy.txt  travel_policy.txt
