[project]
name = "documind-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docx2txt>=0.9",
    "groq>=0.37.1",
    "langchain-chroma>=1.1.0",
    "langchain-groq>=1.1.3",
    "langchain-huggingface>=1.2.2",
    "protobuf==3.20.3",
    "streamlit>=1.58.0",
]
