[project]
name = "documind-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docx2txt>=0.9",
    "faiss-cpu>=1.14.3",
    "groq>=0.37.1",
    "langchain>=1.3.10",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-groq>=1.1.3",
    "langchain-huggingface>=1.2.2",
    "langchain-text-splitters>=1.1.2",
    "protobuf==3.20.3",
    "pypdf>=6.13.3",
    "python-docx>=1.2.0",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.6.0",
    "streamlit>=1.58.0",
]
